实现获取购物车接口
