# atlas/internal/types/cart.go
@@ -1,0 +1,13 @@
+// Code generated by goctl. DO NOT EDIT.
+// goctl 1.8.3
+
+package types
+
+type GetCartReq struct {
+	UserUuid string `json:"user_uuid"`
+}
+
+type GetCartResp struct {
+	Total     int64      `json:"total"`
+	CartItems []CartItem `json:"cart_items"`
+}
