# atlas/internal/types/types.go
@@ -1,0 +1,9 @@
+// Code generated by goctl. DO NOT EDIT.
+// goctl 1.8.3
+
+package types
+
+type CartItem struct {
+	ProductUuid string `json:"product_uuid"`
+	Quantity    int64  `json:"quantity"`
+}
